--- a/Assigment 1/Pages/AdultPage.razor
+++ b/Assigment 1/Pages/AdultPage.razor
@@ -66,6 +66,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        Console.WriteLine("AdultPage");
         secondaryClass = "hidden";
         mainClass = "";
         {
