--- a/Assigment 1/Pages/Security.razor
+++ b/Assigment 1/Pages/Security.razor
@@ -13,4 +13,9 @@
 </AuthorizeView>
 
 @code {
+    
+    protected override async Task OnInitializedAsync()
+    {
+        Console.WriteLine("Security");
+    }
 }
