--- a/Assigment 1/Pages/AddNew.razor
+++ b/Assigment 1/Pages/AddNew.razor
@@ -77,6 +77,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        Console.WriteLine("Add New");
         Adults = await CloudAdultInterface.GetAdultAsync();
     }
 
