--- a/Assigment 1/Pages/Login.razor
+++ b/Assigment 1/Pages/Login.razor
@@ -1,24 +1,25 @@
 ﻿@page "/login"
 @using Assigment_1.Data
-@using System.Threading
 @namespace LoginComponent
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 
 <AuthorizeView>
     <NotAuthorized>
-        <div>
-            <label>User name:</label> <input type="text" placeholder="user name" @bind-value="username"/>
+        <div id="block_container">
+             <label class="centeredLabel">User name:</label>
+                <input type="text" placeholder="user name" @bind-value="username"/>
+                <label class="centeredLabel">Password:</label>
+                <input type="password" placeholder="password" @bind-value="password"/>
+                <div style="color:red">@errorMessage</div>
+                <input type="submit" value="Login" @onclick="PerformLogin">
+                <input type="submit" value="Register" @onclick="PerformRegister">
         </div>
-        <div>
-            <label>Password:</label> <input type="password" placeholder="password" @bind-value="password"/>
-        </div>
-        <div style="color:red">@errorMessage</div>
-        <a href="" @onclick="PerformLogin"> Login </a>
-        <a href="" @onclick="PerformRegister"> Register </a>
     </NotAuthorized>
     <Authorized>
-        <a href="" @onclick="PerformLogout"> Log out, @context.User.Identity.Name </a>
+       
+            <input type="submit" value="Log out, @context.User.Identity.Name" @onclick="PerformLogout">
+      
     </Authorized>
 </AuthorizeView>
 
@@ -26,14 +27,18 @@
     private string username;
     private string password;
     private string errorMessage;
-    
-    
+
+
+    protected override async Task OnInitializedAsync()
+    {
+        Console.WriteLine("Login");
+    }
+
     private async Task PerformLogin()
     {
         errorMessage = "";
         try
         {
-            
             await ((CustomAuthenticationStateProvider) AuthenticationStateProvider).ValidateLogin(username, password);
             username = "";
             password = "";
