--- a/Assigment 1/Pages/Register.razor
+++ b/Assigment 1/Pages/Register.razor
@@ -34,6 +34,12 @@
 
 @code {
 
+    protected override async Task OnInitializedAsync()
+    {
+        Console.WriteLine("Register");
+    }
+    
+    
     public ArrayList SecurityLevels = new()
     {
         1, 2, 3, 4, 5
