--- a/Assigment 1/Pages/Index.razor
+++ b/Assigment 1/Pages/Index.razor
@@ -11,7 +11,8 @@
     </NotAuthorized>
     <Authorized>
        <div class="container p-3 my-3">
-               <h1>Hello @context.User.Identity.Name</h1>
+           <h1>Hello @context.User.Identity.Name</h1>
+           <p>Now you can see Adults, edit them or add a new one!</p>
            </div>
     </Authorized>
 </AuthorizeView>
