--- a/Assigment 1/Pages/Login.razor
+++ b/Assigment 1/Pages/Login.razor
@@ -38,9 +38,9 @@
         try
         {
             await ((CustomAuthenticationStateProvider) AuthenticationStateProvider).ValidateLogin(username, password);
+           // NavigationManager.NavigateTo("/fetchdata");
             username = "";
             password = "";
-            NavigationManager.NavigateTo("/fetchdata");
         }
         catch (Exception e)
         {
