--- a/Assigment 1/Pages/AddNew.razor
+++ b/Assigment 1/Pages/AddNew.razor
@@ -122,9 +122,9 @@
         }
     }
 
-    public bool Check(string s)
+    public bool Check(string stringToCheck)
     {
-        return string.IsNullOrEmpty(s) ? true : false;
+        return string.IsNullOrEmpty(stringToCheck) ? true : false;
     }
 
 }
