--- a/Assigment 1/Pages/AdultPage.razor
+++ b/Assigment 1/Pages/AdultPage.razor
@@ -112,9 +112,9 @@ else
         NavigationManager.NavigateTo("/fetchdata");
     }
 
-    public bool Check(string s)
+    public bool Check(string stringToCheck)
     {
-        return string.IsNullOrEmpty(s) ? true : false;
+        return string.IsNullOrEmpty(stringToCheck) ? true : false;
     }
 
 }
