--- a/Assigment 1/Pages/AddNew.razor
+++ b/Assigment 1/Pages/AddNew.razor
@@ -102,6 +102,7 @@
             {
                 Job job = new Job
                 {
+                    Id= Adults.Count,
                     JobTitle = JobTitle,
                     Salary = Int32.Parse(Salary)
                 };
@@ -111,6 +112,7 @@
             {
                 Job job = new Job
                 {
+                    
                     JobTitle = "Unemployed",
                     Salary = 0
                 };
